# audiodecoder.vorbis

./: CMakeLists.txt  FindVorbis.cmake
audiodecoder.vorbis/: addon.xml  addon.xml.in
src/: OGGCodec.cpp
